# cpp.gtk.notes

./: .gitignore  Makefile  README.md  build.sh  cross-compile.sh  debian-setup.sh  windows-setup.sh
src/: main.cpp  meson.build
subprojects/: gtkmm4.wrap  libsoup-3.0.wrap
win32/: run.lnk
